--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,15 +2,64 @@
     <!-- Base application theme. -->
     <style name="Theme.StoryApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/blue</item>
+        <item name="colorPrimaryVariant">@color/blue_255</item>
         <item name="colorOnPrimary">@color/black</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
+        <item name="colorSecondary">@color/blue</item>
+        <item name="colorSecondaryVariant">@color/blue_255</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+
+        <item name="background">@color/lighter_blue_black</item>
+        <item name="android:windowBackground">@color/blueish_black</item>
+        <item name="actionBarStyle">@style/ActionBarBackground</item>
+
     </style>
+
+    <style name="ActionBarBackground" parent="Widget.MaterialComponents.Light.ActionBar.Solid">
+        <item name="background">@color/lighter_blue_black</item>
+    </style>
+
+    <!--    BUTTON-->
+    <style name="Button">
+        <item name="android:background">@drawable/button_color_gradient</item>
+        <item name="backgroundTint">@null</item>
+        <item name="android:padding">8dp</item>
+        <item name="android:focusable">true</item>
+        <item name="android:clickable">true</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
+    <!--    CARD VIEW-->
+    <style name="ElevatedCardView">
+        <item name="android:backgroundTint">@color/lighter_blue_black</item>
+        <item name="cardCornerRadius">8dp</item>
+    </style>
+
+    <!--    TEXT-->
+    <style name="Text">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="Text.Title">
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="Text.Caption">
+        <item name="android:textColor">@color/text_white_transparent</item>
+    </style>
+
+    <style name="Text.Header">
+        <item name="android:textSize">32sp</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
+    </style>
+
+    <style name="Text.Header.Big">
+        <item name="android:textSize">42sp</item>
+    </style>
+
 </resources>
