--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,7 +17,7 @@
     <color name="text_white_transparent">#55FFFFFF</color>
     <color name="gray">#AFAFAF</color>
     <color name="blueish_black">#16171E</color>
-    <color name="lighter_blueish_black">#22232E</color>
+    <color name="lighter_blue_black">#22232E</color>
 
     <color name="mtrl_textinput_default_box_stroke_color" tools:override="true">#3476F6</color>
     <color name="light_blue_50">#FFE1F5FE</color>
