--- a/app/src/main/res/xml/activity_post_scene.xml
+++ b/app/src/main/res/xml/activity_post_scene.xml
@@ -1,27 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<MotionScene 
+<MotionScene
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:motion="http://schemas.android.com/apk/res-auto">
 
     <Transition
         motion:constraintSetEnd="@+id/end"
         motion:constraintSetStart="@id/start"
-        motion:duration="1000">
-       <KeyFrameSet>
-       </KeyFrameSet>
+        motion:duration="300"
+        motion:motionInterpolator="easeOut">
+        <KeyFrameSet>
+        </KeyFrameSet>
+        <OnClick motion:targetId="@+id/img_container" />
     </Transition>
 
     <ConstraintSet android:id="@+id/start">
-        <Constraint
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:id="@+id/switch_location"
-            motion:layout_constraintEnd_toStartOf="@+id/img_container"
-            motion:layout_constraintBottom_toBottomOf="@+id/img_container"
-            motion:layout_constraintTop_toTopOf="@+id/img_container"
-            android:layout_marginEnd="16dp" />
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
+        <Constraint
+            android:layout_marginEnd="8dp"
+            android:layout_height="240dp"
+            motion:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="0dp"
+            motion:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
+            android:id="@+id/et_description"
+            motion:layout_constraintTop_toBottomOf="parent" />
+        <Constraint
+            android:id="@+id/img_story"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
     </ConstraintSet>
 </MotionScene>
