--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -70,30 +70,28 @@
         android:layout_width="38dp"
         android:layout_height="38dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toBottomOf="@+id/img_story"
+        android:contentDescription="@string/expand_image"
         app:layout_constraintEnd_toEndOf="@+id/img_story"
-        app:srcCompat="@drawable/circle_container"
-        android:contentDescription="@string/expand_image" />
+        app:srcCompat="@drawable/circle_container" />
 
     <ImageView
         android:id="@+id/img_expand"
         android:layout_width="28dp"
         android:layout_height="28dp"
+        android:contentDescription="@string/expand_image"
         app:layout_constraintBottom_toBottomOf="@+id/img_container"
         app:layout_constraintEnd_toEndOf="@+id/img_container"
         app:layout_constraintStart_toStartOf="@+id/img_container"
         app:layout_constraintTop_toTopOf="@+id/img_container"
-        app:srcCompat="@drawable/ic_open_in_full"
-        android:contentDescription="@string/expand_image" />
+        app:srcCompat="@drawable/ic_open_in_full" />
 
     <com.google.android.material.switchmaterial.SwitchMaterial
         android:id="@+id/switch_location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@+id/img_container"
+        app:layout_constraintEnd_toStartOf="@+id/img_container"
+        app:layout_constraintTop_toTopOf="@+id/img_container" />
 
     <TextView
         android:id="@+id/tv_token"
