--- a/app/src/main/res/xml/activity_post_scene.xml
+++ b/app/src/main/res/xml/activity_post_scene.xml
@@ -14,6 +14,13 @@
     </Transition>
 
     <ConstraintSet android:id="@+id/start">
+        <Constraint
+            android:layout_marginEnd="16dp"
+            android:layout_height="38dp"
+            motion:layout_constraintBottom_toTopOf="@+id/ed_add_description"
+            motion:layout_constraintEnd_toEndOf="@+id/img_story"
+            android:layout_width="38dp"
+            android:id="@+id/img_container" />
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
@@ -30,5 +37,24 @@
             android:id="@+id/img_story"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
+        <Constraint
+            android:layout_marginEnd="16dp"
+            android:layout_height="38dp"
+            android:layout_marginRight="16dp"
+            motion:layout_constraintEnd_toEndOf="@+id/img_story"
+            android:layout_width="38dp"
+            android:id="@+id/img_container"
+            motion:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="110dp" />
+        <Constraint
+            android:id="@+id/ed_add_description"
+            motion:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="0dp"
+            android:layout_height="240dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            motion:layout_constraintStart_toStartOf="parent"
+            motion:layout_constraintBottom_toBottomOf="parent"
+            motion:layout_constraintHorizontal_bias="0.0" />
     </ConstraintSet>
 </MotionScene>
