Detail animation Fix

--- a/app/src/main/res/xml/activity_detail_scene.xml
+++ b/app/src/main/res/xml/activity_detail_scene.xml
@@ -3,26 +3,32 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:motion="http://schemas.android.com/apk/res-auto">
 
+
     <Transition
         motion:constraintSetEnd="@+id/end"
         motion:constraintSetStart="@id/start"
-        motion:duration="300"
+        motion:duration="200"
         motion:motionInterpolator="easeOut">
-        <OnClick motion:targetId="@id/tv_description"/>
-        <KeyFrameSet>
-        </KeyFrameSet>
+        <OnSwipe motion:targetId="@id/tv_detail_description"/>
     </Transition>
 
     <ConstraintSet android:id="@+id/start">
+        <Constraint
+            android:id="@+id/tv_detail_description"
+            motion:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="0dp"
+            android:layout_height="72dp"
+            motion:layout_constraintStart_toStartOf="parent"
+            motion:layout_constraintBottom_toBottomOf="parent" />
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
         <Constraint
-            android:id="@+id/tv_description"
+            android:id="@+id/tv_detail_description"
             motion:layout_constraintEnd_toEndOf="parent"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            motion:layout_constraintBottom_toBottomOf="parent"
-            motion:layout_constraintStart_toStartOf="parent" />
+            android:layout_height="135dp"
+            motion:layout_constraintStart_toStartOf="parent"
+            motion:layout_constraintBottom_toBottomOf="parent" />
     </ConstraintSet>
 </MotionScene>
