Optimize Code and Fix bug session

--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -97,9 +97,24 @@
         android:id="@+id/tv_token"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:visibility="visible"
+        android:visibility="gone"
         android:paddingHorizontal="24dp"
         android:text="@string/error_list"
+        android:textColor="@color/blue_255"
+        android:textSize="16sp"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_map_permission"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:visibility="visible"
+        android:paddingHorizontal="24dp"
+        android:text="@string/on_location"
         android:textColor="@color/blue_255"
         android:textSize="16sp"
         android:textAlignment="center"
