--- a/app/src/main/res/xml/activity_post_scene.xml
+++ b/app/src/main/res/xml/activity_post_scene.xml
@@ -21,6 +21,13 @@
             motion:layout_constraintEnd_toEndOf="@+id/img_story"
             android:layout_width="38dp"
             android:id="@+id/img_container" />
+        <Constraint
+            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:id="@+id/tv_map_permission"
+            motion:layout_constraintEnd_toStartOf="@+id/switch_location"
+            motion:layout_constraintBottom_toBottomOf="@+id/switch_location"
+            motion:layout_constraintTop_toTopOf="@+id/switch_location" />
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
@@ -56,5 +63,13 @@
             motion:layout_constraintStart_toStartOf="parent"
             motion:layout_constraintBottom_toBottomOf="parent"
             motion:layout_constraintHorizontal_bias="0.0" />
+        <Constraint
+            android:id="@+id/tv_map_permission"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:visibility="visible"
+            motion:layout_constraintEnd_toStartOf="@+id/switch_location"
+            motion:layout_constraintBottom_toBottomOf="@+id/switch_location"
+            motion:layout_constraintTop_toTopOf="@+id/switch_location" />
     </ConstraintSet>
 </MotionScene>
